--- a/gatuno.css
+++ b/gatuno.css
@@ -19,6 +19,7 @@ html, body
 {
   /* Trozos de texto tiernos */
     border-radius: 0.4em;
+    font-family: 'Sans Serif';
     color: #0000ff;
 }
 
@@ -27,6 +28,8 @@ html, body
  /* Resaltado antes de mostrar todas las herramientas,
     mensaje informativo */
   border: 2px dotted #0015bb;
+  padding-left: 1.5;
+  padding-top: 0.5%;
   font-size: 20px;
   width: 50%;
   border-radius: 0.2em;
