--- a/gatuno.css
+++ b/gatuno.css
@@ -38,7 +38,7 @@ a
   border: 4px dotted #0015bb;
 /* Espaciado de texto */  
   padding: 1%;
-  inline-height: 0.5%;
+  inline-size: 0.5%;
   font-size: 20px;
   width: 50%;
   border-radius: 0.2em;
