--- a/gatuno.css
+++ b/gatuno.css
@@ -38,7 +38,7 @@ a
     mensaje informativo */
   border: 2px dotted #0015bb;
 /* Espaciado de texto */  
-  padding: 1%;
+  padding: 1em;
   inline-size: 0.5%;
   font-size: 20px;
   width: 50%;
